[package]
name = "neon-serde"
version = "0.10.0"
authors = [
    "Damir Jelić <poljar@termina.org.uk>",
    "Gabriel Castro <dev@GabrielCastro.ca>"
]
description = "Easily serialize object for use with neon, fork of neon-serde"
license = "MIT"
repository = "https://github.com/mappingvermont/neon-serde"
readme = "readme.md"
edition = "2021"

[dependencies]
serde = "1.0"

[dependencies.neon]
version = "1.1.1"
default-features = false
features = ["default-panic-hook", "napi-8", "try-catch-api", "event-queue-api"]

[dependencies.num]
version = "0.4.0"
default-features = false

[dev-dependencies]
serde_derive = "1"
